Hacky fix for apply btn spacing issue

--- a/_sass/base/_header.sass
+++ b/_sass/base/_header.sass
@@ -27,6 +27,7 @@ header
     background-color: $ALT_LINK_BG_COLOR
     font-size: 14px
     padding: 2px 10px
+    margin-right: 10%
 
     a
       color: white
@@ -63,6 +64,7 @@ header
       font-size: 14px
       letter-spacing: 2px
       padding: 15px
+      margin-right: 0
       order: 1
       text-align: center
       text-transform: uppercase
